<resources>
    <string name="app_name">11pract</string>
    <string name="Register">Регистрация</string>
    <string name="Icon1">TODO</string>
    <string name="Icon2">TODO</string>
    <string name="info">Согласен(-а) с условиями использования и политикой конфеденциальности</string>
    <string name="Reg">Зарегистрироватся</string>
    <string name="Button">TODO</string>
    <string name="line1">TODO</string>
    <string name="line2">TODO</string>
    <string name="line3">TODO</string>
    <string name="number">Введите ваш контактный номер</string>
    <string name="name">Введите ваше имя</string>
    <string name="Lastname">Введите вашу фамилию</string>
    <string name="icon3">Вход</string>
    <string name="help">Помощь</string>
    <string name="icon4">TODO</string>
    <string name="icon5">TODO</string>
    <string name="image">TODO</string>
    <string name="Name">Иван,</string>
    <string name="welcome">Приветствуем в нашем приложении</string>
    <string name="icon1">TODO</string>
    <string name="image1">TODO</string>
    <string name="image2">TODO</string>
    <string name="icon2">TODO</string>
    <string name="icon6">TODO</string>
    <string name="button">TODO</string>
    <string name="button2">TODO</string>
    <string name="image3">TODO</string>
    <string name="image4">TODO</string>
    <string name="image5">TODO</string>
    <string name="image6">TODO</string>
    <string name="image7">TODO</string>
    <string name="image8">TODO</string>
    <string name="image9">TODO</string>
    <string name="info1">Подробная информация</string>
    <string name="recom">Предложения</string>
</resources>