<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="179dp"
        android:layout_marginBottom="615dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/f1"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginStart="221dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="753dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@drawable/fic"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/Icon1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="252dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="720dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085"
        app:srcCompat="@drawable/fic2"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/icon5" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="281dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="691dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@drawable/fic3"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/icon4" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="278dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="721dp"
        android:textSize="14sp"
        android:textColor="@color/blackText"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="302dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="93dp"
        android:layout_marginBottom="690dp"
        android:text="@string/icon3"
        android:textSize="14sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="157dp"
        android:layout_height="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="139dp"
        android:layout_marginTop="416dp"
        android:layout_marginBottom="370dp"
        android:text="@string/Lastname"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="119dp"
        android:layout_height="16dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="176dp"
        android:layout_marginTop="355dp"
        android:layout_marginBottom="431dp"
        android:text="@string/name"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="212dp"
        android:layout_height="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="477dp"
        android:layout_marginBottom="309dp"
        android:text="@string/number"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="296dp"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="418dp"
        android:contentDescription="@string/line3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fic4"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="296dp"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="441dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="357dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567"
        app:srcCompat="@drawable/fic4"
        tools:ignore="ImageContrastCheck,ImageContrastCheck"
        android:contentDescription="@string/line2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="296dp"
        android:layout_height="2dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="502dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="296dp"
        android:contentDescription="@string/line1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651"
        app:srcCompat="@drawable/fic4"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="296dp"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="538dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="222dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681"
        app:srcCompat="@drawable/fic5"
        android:contentDescription="@string/Button" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="142dp"
        android:layout_height="16dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="551dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="235dp"
        android:text="@string/Reg"
        android:textColor="#212121"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="647dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="126dp"
        android:text="@string/info"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="303dp"
        android:layout_marginTop="647dp"
        android:layout_marginBottom="126dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ico"
        android:contentDescription="@string/Icon2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="28dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>