<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="82dp"
        android:layout_height="15dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="261dp"
        android:layout_marginTop="285dp"
        android:layout_marginBottom="500dp"
        android:text="@string/recom"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="143dp"
        android:layout_height="15dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="199dp"
        android:layout_marginTop="761dp"
        android:layout_marginBottom="21dp"
        android:text="@string/info1"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="242dp"
        android:layout_marginBottom="395dp"
        android:contentDescription="@string/image9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        app:srcCompat="@drawable/fic10"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginTop="305dp"
        android:layout_marginBottom="395dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        app:srcCompat="@drawable/fic11"
        android:contentDescription="@string/image8" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="242dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="305dp"
        android:layout_marginBottom="395dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        app:srcCompat="@drawable/fic12"
        android:contentDescription="@string/image7" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="242dp"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="597dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126"
        app:srcCompat="@drawable/fic6"
        android:contentDescription="@string/image6" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="597dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.148"
        app:srcCompat="@drawable/fic7"
        android:contentDescription="@string/image5" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="242dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="103dp"
        android:layout_marginBottom="597dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126"
        app:srcCompat="@drawable/fic8"
        android:contentDescription="@string/image4" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="241dp"
        android:layout_marginTop="229dp"
        android:layout_marginBottom="535dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        app:srcCompat="@drawable/fic9"
        android:contentDescription="@string/image3" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="241dp"
        android:layout_marginTop="431dp"
        android:layout_marginBottom="333dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546"
        app:srcCompat="@drawable/fic9"
        android:contentDescription="@string/button2" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="101dp"
        android:layout_height="36dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="493dp"
        android:layout_marginEnd="241dp"
        android:layout_marginBottom="271dp"
        android:contentDescription="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646"
        app:srcCompat="@drawable/fic9"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="296dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="766dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015"
        app:srcCompat="@drawable/fic3"
        android:contentDescription="@string/icon6" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="30dp"
        android:layout_height="29dp"
        android:layout_marginStart="322dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="763dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        app:srcCompat="@drawable/fic2"
        android:contentDescription="@string/icon2" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="235dp"
        android:layout_height="2dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="77dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="766dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@drawable/fic4"
        android:contentDescription="@string/image2" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="199dp"
        android:layout_height="200dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="143dp"
        android:layout_marginTop="555dp"
        android:layout_marginBottom="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/f1"
        android:contentDescription="@string/image1" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="323dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="766dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/ivan"
        android:contentDescription="@string/icon1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="211dp"
        android:layout_height="15dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="128dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="705dp"
        android:text="@string/welcome"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="44dp"
        android:layout_height="19dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="295dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="725dp"
        android:text="@string/Name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077" />

</androidx.constraintlayout.widget.ConstraintLayout>